Fix my_rental_units being off center

--- a/resources/css/my-rental-units.css
+++ b/resources/css/my-rental-units.css
@@ -23,9 +23,3 @@ button.delete-btn:hover {
     background-color: darkred;
     color: white;
 }
-
-main {
-    margin-left: 5%;
-    margin-right: 5%;
-}
-
